# ArduinoMAX6675

./: .gitignore  README.md
serialthermocouple/: CMakeLists.txt  max6675a.cpp  max6675a.h  serialthermocouple.h  serialthermocouple.ino  stopwatch.h  stopwatch.ino
test_max/: test_max.ino
